unreleased
    New Features
    Improvements
        - Allow user to use X11 background for fake transparency (#390)
        - Allow user to specify background image.
        - Improved keybinding handling, allowing on-release and modifier only (#384).
    Bug fixes

1.0.1
    Bug fixes
         - Fix typo in manpage.
         - Return old behaviour for rofi placement (#395, #389)
         - Switch desktop when switching window (#393)
         - Remove unneeded use of bash (#391)
         - Make history parser more robust against corrupted files. (#388)
         - Fix desktop number (#386)

1.0.0
    New Features

        - Blinking cursor
        - BliSeparate configuration file
        - BliHistory in drun mode (#343)
        - BliContext menu mode, show rofi at the mouse pointer

    Improvement
        - auto select and single item on dmenu mode (#281)
        - Unlimited window title length.
        - Correctly follow the active desktop, instead of active window.
        - If requesting modi that is not enabled, show it anyway.
        - DMenu password mode. (#315)
        - Levenshtein sort is now UTF-8 aware.
        - Use xcb instead of large xlib library.
        - Use GLib mainloop for cleaner code and easier external event based
        - handling in future.
        - Run dialog: Try to convert between locale, fs encoding and utf8.
        - Fixing problems with non-utf8 filesystem encodings.
        - Try to display non-utf8 strings as good as possible.
        - Autocomplete bang hint in combi mode (#380)
        - Remove magic line length limits by switching to getline
        - from fgets.
        - Print git version for git builds in version string.

    Bug fixes
        - Fix subpixel rendering. (#303)
        - Fix basic tests on OpenBSD (#272)
        - Fix wrong use of memcpy (thx to Jasperia).
        - Work around for sigwaitinfo on OpenBSD.
        - Ignore invalid entries (non-utf8) in dmenu mode.
        - Glib signal handling.